--- a/styles/basket.css
+++ b/styles/basket.css
@@ -1,14 +1,10 @@
 .basket {
-   display: flex;
    width: 400px;
    background-color: rgb(61, 61, 61);
    padding: 16px;
-   min-height: 100vh;
    box-shadow: -9px 8px 20px rgba(0, 0, 0, 0.4);
    border-radius: 8px;
    margin: 16px;
-   margin-right: 16px;
-   justify-content: center;
 }
 
 h4 {
@@ -41,7 +37,14 @@ h4 {
    align-items: center;
    width: 100%;
    justify-content: space-around;
-   margin-top: 8px;
+   margin: 8px;
+}
+
+.courtBasket {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   padding: 8px;
 }
 
 .basket-end {
@@ -90,7 +93,7 @@ h4 {
    width: 100%;
    position: sticky;
    bottom: 0;
-   max-height: 30vh;
+   max-height: 50vh;
    overflow: overlay;
    background-color: rgb(61, 61, 61);
    justify-content: center;
@@ -107,6 +110,7 @@ h4 {
    display: flex;
    justify-content: space-around;
    flex: 1;
+   align-items: center;
 }
 
 .mobileFooterBasket {
@@ -118,4 +122,11 @@ h4 {
 
 .mobileHeader {
    text-align: center;
+}
+
+.basketWrapper {
+   position: sticky;
+   top: 16px;
+   max-height: calc(100vh - var(--gap-top) - var(--bottom-bar-h));
+   overflow: auto;
 }
