--- a/styles/mediaQ.css
+++ b/styles/mediaQ.css
@@ -57,6 +57,8 @@
 
    button {
       box-shadow: none;
+      padding: 8px;
+      font-size: 16px;
    }
 
    .struktur-wrapper {
